--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -6,85 +6,94 @@
     </div>
     <form class="register-form" [formGroup]="form" (ngSubmit)="submit()">
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-100" appearance="outline">
                 <mat-label class="field-group-label" for="email">Email</mat-label>
-                <input matInput id="email" type="email" formControlName="email">
+                <input class="field-group-input" matInput id="email" type="email" formControlName="email">
                 <mat-error *ngIf="form.get('email')?.invalid && form.get('email')?.touched">
                     Invalid email
                 </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input"  appearance="outline">
+            <mat-form-field class="field-group-mat-100"  appearance="outline">
                 <mat-label class="field-group-label" for="password">Password</mat-label>
-                <input matInput id="password" type="password" formControlName="password">
+                <input class="field-group-input" matInput id="password" [type]="hide() ? 'password' : 'text'" formControlName="password">
+                <button
+                  mat-icon-button
+                  matSuffix
+                  (click)="clickEvent($event)"
+                  [attr.aria-label]="'Hide password'"
+                  [attr.aria-pressed]="hide()"
+                >
+                    <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
                 <mat-error *ngIf="form.get('password')?.invalid && form.get('password')?.touched">
                     Invalid password
                 </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="firstname">First Name</mat-label>
-                <input matInput id="firstname" type="text" formControlName="firstname">
+                <input class="field-group-input" matInput id="firstname" type="text" formControlName="firstname">
                 <mat-error *ngIf="form.get('firstname')?.invalid && form.get('firstname')?.touched">
                     Invalid Firstname
                  </mat-error>
             </mat-form-field>
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="lastname">Last Name</mat-label>
-                <input matInput id="lastname" type="text" formControlName="lastname">
+                <input class="field-group-input" matInput id="lastname" type="text" formControlName="lastname">
                 <mat-error *ngIf="form.get('lastname')?.invalid && form.get('lastname')?.touched">
                     Invalid Lastname
                  </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="streetNumber">Street Number</mat-label>
-                <input matInput id="streetNumber" type="number" formControlName="streetNumber">
+                <input class="field-group-input" matInput id="streetNumber" type="number" formControlName="streetNumber">
                 <mat-error *ngIf="form.get('streetNumber')?.invalid && form.get('streetNumber')?.touched">
                     Invalid Street Number
                  </mat-error>
             </mat-form-field>
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="streetName">Street Name</mat-label>
-                <input matInput id="streetName" type="text" formControlName="streetName">
+                <input class="field-group-input" matInput id="streetName" type="text" formControlName="streetName">
                 <mat-error *ngIf="form.get('streetName')?.invalid && form.get('streetName')?.touched">
                     Invalid Street Name
                  </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="city">City</mat-label>
-                <input matInput id="city" type="text" formControlName="city">
+                <input class="field-group-input" matInput id="city" type="text" formControlName="city">
                 <mat-error *ngIf="form.get('city')?.invalid && form.get('city')?.touched">
                     Invalid City
                  </mat-error>
             </mat-form-field>
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-50" appearance="outline">
                 <mat-label class="field-group-label" for="zipcode">Zip Code</mat-label>
-                <input matInput id="zipcode" type="number" formControlName="zipcode">
+                <input class="field-group-input" matInput id="zipcode" type="number" formControlName="zipcode">
                 <mat-error *ngIf="form.get('zipcode')?.invalid && form.get('zipcode')?.touched">
                     Invalid Zip Code
                  </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-100" appearance="outline">
                 <mat-label class="field-group-label" for="country">Contry</mat-label>
-                <input matInput id="country" type="text" formControlName="country">
+                <input class="field-group-input" matInput id="country" type="text" formControlName="country">
                 <mat-error *ngIf="form.get('birthDate')?.invalid && form.get('country')?.touched">
                     Invalid Country
                 </mat-error>
             </mat-form-field>
         </div>
         <div class="field-group">
-            <mat-form-field class="field-group-input" appearance="outline">
+            <mat-form-field class="field-group-mat-100" appearance="outline">
                 <mat-label class="field-group-label" for="birthDate">Birth Date</mat-label>
-                <input matInput id="birthDate" formControlName="birthDate" [matDatepicker]="picker">
-                <mat-hint>yyyy-MM-dd</mat-hint>
+                <input class="field-group-input" matInput id="birthDate" formControlName="birthDate" [matDatepicker]="picker">
+                <mat-hint>MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
                 <mat-error *ngIf="form.get('birthDate')?.invalid && form.get('birthDate')?.touched">
