--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -35,6 +35,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-decoration: none;
 
 
         &_login{
@@ -59,7 +60,26 @@
             }
         }
     }
+}
 
+.temporary_link{
+    margin-top: 15px;
+    cursor: pointer;
+    color: #FF3B00;
+    text-decoration: underline;
+    font-weight: 500;
+}
 
+.container-help{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
 
+    &-icon{
+        color: gray;
+        font-size: 48px; 
+        width: 48px; 
+        height: 48px; 
+        cursor: pointer;
+    }
 }
