--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="homepage" *ngIf="!($isLogged() | async)">
+<div class="homepage">
   <div class="homepage_banner"><img class="homepage_banner_img" src="assets/P12_banner.png" alt="Banner Your car your way"></div>
-  <div class="homepage_container">
+  <div class="homepage_container" *ngIf="!($isLogged() | async)">
         <a 
           class="homepage_button homepage_button_login" 
           routerLink="login"
@@ -14,15 +14,13 @@
             Register
         </a>
   </div>
-</div>
 
-<div class="homepage" *ngIf="($isLogged() | async)">
-    <a class="temporary_link" routerLink="discussion">
-      There is no content at the moment, would you like to contact us?
-    </a>
+  <a class="temporary_link" *ngIf="($isLogged() | async)" routerLink="discussion">
+    There is no content at the moment, would you like to contact us?
+  </a>
 
-    <a class="container-help" routerLink="discussion">
-      <mat-icon class="container-help-icon">forum</mat-icon>
-    </a>
+  <a class="container-help" *ngIf="($isLogged() | async)" routerLink="discussion">
+    <mat-icon class="container-help-icon">forum</mat-icon>
+  </a>
 </div>
 
