--- a/front/src/app/pages/discussions/discussions-detail/discussions-detail.component.scss
+++ b/front/src/app/pages/discussions/discussions-detail/discussions-detail.component.scss
@@ -11,6 +11,7 @@
 
     .message-area {
         margin-top: 10px;
+        margin-bottom: 200px;
 
         &-form {
             background-color: white;
@@ -52,21 +53,19 @@
 
         .message-container {
             max-width: 80%;
+            width: fit-content;
             padding: 10px;
             border-radius: 5px;
             margin-bottom: 10px;
-            display: inline-block;
+            display: flex;
             flex-direction: column;
-            align-items: flex-start;
             word-wrap: break-word;
 
             &.my-message {
                 background-color: #225ec4;
                 color: white;
                 margin-left: auto; 
-                text-align: right;
-                float: right;
-                clear: both;
+                align-items: flex-end;
             }
 
             &.other-message {
